Fix PomSettings and cleanup github JDK usage (#657)
- PomSettings was incorrect (wrong license)
- Fix up JVM flags in mill
- remove the useless JDK25 actions - we never actually did anything we
them - Mill was downloading JDK21 all along.